Add day-in-life page, reading journey slider, and Divar team highlight
- Create day-in-life.html with routine snapshot, timeline, balance highlights, and JSON-LD
- Add navigation link and sitemap entry for new page
- Add custom book cover artwork and slider JS to showcase design books and current reading on my story page
- Introduce Divar team spotlight with new team photo assets
- Enhance homepage tags, global nav, and styling for new components
- Update CSS with slider, team section, and tag styles

--- a/case-studies/divar-secure-call.html
+++ b/case-studies/divar-secure-call.html
@@ -67,6 +67,7 @@
                 </button>
                 <div class="nav-links" id="main-nav">
                     <a href="../my-story.html" aria-label="Read my story">my story</a>
+                    <a href="../day-in-life.html" aria-label="Explore my daily routine">day in life</a>
                     <a href="../index.html#case-studies" aria-label="View case studies">case studies</a>
                     <a href="../contact.html" aria-label="Contact me">contact</a>
                     <a href="../resume.html" aria-label="View resume">resume</a>
