--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             </button>
             <div class="nav-links" id="main-nav">
                 <a href="my-story.html" aria-label="Read my story">my story</a>
+                <a href="day-in-life.html" aria-label="Explore my daily routine">day in life</a>
                 <a href="#case-studies" aria-label="View case studies">case studies</a>
                 <a href="contact.html" aria-label="Contact me">contact</a>
                 <a href="resume.html" aria-label="View resume">resume</a>
@@ -128,6 +129,11 @@
                         <div class="case-study-stats">
                             <p>A feature used by <strong>2.1 million users per week</strong></p>
                         </div>
+                        <ul class="tag-list case-study-tags">
+                            <li class="tag">real project</li>
+                            <li class="tag">trust &amp; safety</li>
+                            <li class="tag">impact at scale</li>
+                        </ul>
                         <div class="case-study-actions">
                             <a href="case-studies/divar-secure-call.html" class="case-study-link">Explore</a>
                             <button class="case-study-recap-btn" data-recap="divar" aria-label="View recap for Divar case study">Recap</button>
@@ -147,6 +153,11 @@
                                 <div class="case-study-platform">at <strong>Setare Aval Co.</strong></div>
                             </div>
                         </div>
+                        <ul class="tag-list case-study-tags">
+                            <li class="tag">real project</li>
+                            <li class="tag">retention strategy</li>
+                            <li class="tag">cross-functional leadership</li>
+                        </ul>
                         <div class="case-study-actions">
                             <a href="case-studies/setare-aval-engagement.html" class="case-study-link">Explore</a>
                             <button class="case-study-recap-btn" data-recap="setare-aval" aria-label="View recap for Setare Aval case study">Recap</button>
@@ -170,6 +181,11 @@
                     </div>
                     <h3 class="experience-title">Design Instructor at Rahnema College</h3>
                     <p class="experience-description">Training <strong>200+ students</strong> through <strong>6 courses</strong> since 2022</p>
+                    <ul class="tag-list experience-tags">
+                        <li class="tag">education</li>
+                        <li class="tag">mentorship</li>
+                        <li class="tag">curriculum design</li>
+                    </ul>
                 </div>
 
                 <div class="experience-card">
@@ -178,6 +194,11 @@
                     </div>
                     <h3 class="experience-title">Morph Design System</h3>
                     <p class="experience-description">Built from scratch, which is used over <strong>7400 times</strong> in the Figma Community</p>
+                    <ul class="tag-list experience-tags">
+                        <li class="tag">open source</li>
+                        <li class="tag">design system</li>
+                        <li class="tag">community impact</li>
+                    </ul>
                     <a href="https://www.figma.com/community/file/1069259333467083182" target="_blank" rel="noopener noreferrer" class="experience-link" aria-label="View Morph Design System on Figma Community (opens in new tab)">View on Figma Community →</a>
                 </div>
             </div>
