--- a/case-studies/setare-aval-engagement.html
+++ b/case-studies/setare-aval-engagement.html
@@ -67,6 +67,7 @@
                 </button>
                 <div class="nav-links" id="main-nav">
                     <a href="../my-story.html" aria-label="Read my story">my story</a>
+                    <a href="../day-in-life.html" aria-label="Explore my daily routine">day in life</a>
                     <a href="../index.html#case-studies" aria-label="View case studies">case studies</a>
                     <a href="../contact.html" aria-label="Contact me">contact</a>
                     <a href="../resume.html" aria-label="View resume">resume</a>
