Improve hiring manager experience on homepage

--- a/index.html
+++ b/index.html
@@ -89,7 +89,40 @@
                         <p>Certified in UX Design by the University of Tehran and Sharif University</p>
                         <p>Mentored <strong>200+ students</strong> as a design instructor over the past 3 years.</p>
                     </div>
+                    <div class="hero-actions">
+                        <a href="#case-studies" class="hero-button primary-button">View case studies</a>
+                        <a href="resume.html" class="hero-button secondary-button">View resume</a>
+                        <a href="contact.html" class="hero-link-availability">Open to senior product designer roles →</a>
+                    </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Snapshot Metrics -->
+    <section class="section hero-metrics">
+        <div class="container">
+            <div class="metrics-grid">
+                <article class="metric-card">
+                    <span class="metric-value">60% ↓</span>
+                    <h3 class="metric-title">Harassment incidents</h3>
+                    <p class="metric-description">Designed Divar’s secure call system with Trust &amp; Safety teams, protecting 2.1M weekly users.</p>
+                </article>
+                <article class="metric-card">
+                    <span class="metric-value">8.3K+</span>
+                    <h3 class="metric-title">Design system adoptions</h3>
+                    <p class="metric-description">Built Morph, an open design system powering teams on Figma and shaping product handoffs.</p>
+                </article>
+                <article class="metric-card">
+                    <span class="metric-value">200+</span>
+                    <h3 class="metric-title">Designers mentored</h3>
+                    <p class="metric-description">Lead project-based programs at Rahnema College, helping emerging designers launch careers.</p>
+                </article>
+                <article class="metric-card">
+                    <span class="metric-value">2-week</span>
+                    <h3 class="metric-title">Experiment cadence</h3>
+                    <p class="metric-description">Partner with data &amp; product to ship AI-augmented flows and iterate with measurable outcomes.</p>
+                </article>
             </div>
         </div>
     </section>
