Align typography system across portfolio

--- a/case-studies/setare-aval-engagement.html
+++ b/case-studies/setare-aval-engagement.html
@@ -433,7 +433,7 @@
         <div class="container">
             <div class="footer-content">
                 <p class="footer-text">Designed by <strong>Masih Sadri</strong> @ Setare Aval</p>
-                <p class="footer-contact">sadri.masih@gmail.com | <a href="https://www.linkedin.com/in/msadri/" target="_blank" rel="noopener noreferrer" class="footer-link" aria-label="LinkedIn profile (opens in new tab)">LinkedIn</a></p>
+                <p class="footer-contact">sdarimasih@gmail.com | <a href="https://www.linkedin.com/in/msadri/" target="_blank" rel="noopener noreferrer" class="footer-link" aria-label="LinkedIn profile (opens in new tab)">LinkedIn</a></p>
             </div>
         </div>
     </footer>
