--- a/resume.html
+++ b/resume.html
@@ -95,7 +95,7 @@
                         <span class="separator">•</span>
                         <a href="https://masihsadri.com" target="_blank" rel="noopener noreferrer">Portfolio</a>
                         <span class="separator">•</span>
-                        <a href="mailto:sadri.masih@gmail.com">sadri.masih@gmail.com</a>
+                        <a href="mailto:sdarimasih@gmail.com">sdarimasih@gmail.com</a>
                         <span class="separator">•</span>
                         <span>Tehran, Iran | Willing to relocate</span>
                     </div>
