--- a/contact.html
+++ b/contact.html
@@ -76,9 +76,9 @@
         <section class="hero-story">
             <div class="container">
                 <div class="hero-story-content">
-                    <h1 class="hero-story-title">Let's Connect</h1>
-                    <h2 class="hero-story-subtitle">I'd love to hear from you</h2>
-                    <p class="hero-story-description">Whether you're looking for a design mentor, want to collaborate on a project, or have an opportunity to discuss, feel free to reach out. I'm always open to meaningful conversations about design, user experience, and building products that matter.</p>
+                    <h1 class="hero-story-title text-display">Let's Connect</h1>
+                    <h2 class="hero-story-subtitle text-heading-large">I'd love to hear from you</h2>
+                    <p class="hero-story-description text-body-large">Whether you're looking for a design mentor, want to collaborate on a project, or have an opportunity to discuss, feel free to reach out. I'm always open to meaningful conversations about design, user experience, and building products that matter.</p>
                 </div>
             </div>
         </section>
@@ -89,23 +89,23 @@
                 <div class="contact-methods-grid">
                     <div class="contact-method-card">
                         <div class="contact-method-icon">📧</div>
-                        <h3 class="contact-method-title">Email</h3>
-                        <p class="contact-method-description">For general inquiries, collaboration opportunities, or just to say hello</p>
-                        <a href="mailto:sadri.masih@gmail.com" class="contact-method-link">sadri.masih@gmail.com</a>
+                        <h3 class="contact-method-title text-heading-medium">Email</h3>
+                        <p class="contact-method-description text-body-medium">For general inquiries, collaboration opportunities, or just to say hello</p>
+                        <a href="mailto:sdarimasih@gmail.com" class="contact-method-link text-body-medium-strong">sdarimasih@gmail.com</a>
                     </div>
 
                     <div class="contact-method-card">
                         <div class="contact-method-icon">💼</div>
-                        <h3 class="contact-method-title">LinkedIn</h3>
-                        <p class="contact-method-description">Connect with me professionally and see my latest updates</p>
-                        <a href="https://www.linkedin.com/in/msadri/" target="_blank" rel="noopener noreferrer" class="contact-method-link" aria-label="LinkedIn profile (opens in new tab)">View Profile →</a>
+                        <h3 class="contact-method-title text-heading-medium">LinkedIn</h3>
+                        <p class="contact-method-description text-body-medium">Connect with me professionally and see my latest updates</p>
+                        <a href="https://www.linkedin.com/in/msadri/" target="_blank" rel="noopener noreferrer" class="contact-method-link text-body-medium-strong" aria-label="LinkedIn profile (opens in new tab)">View Profile →</a>
                     </div>
 
                     <div class="contact-method-card">
                         <div class="contact-method-icon">🎨</div>
-                        <h3 class="contact-method-title">Figma</h3>
-                        <p class="contact-method-description">Check out my design work and the Morph Design System</p>
-                        <a href="https://www.figma.com/@masih" target="_blank" rel="noopener noreferrer" class="contact-method-link" aria-label="Figma profile (opens in new tab)">View Profile →</a>
+                        <h3 class="contact-method-title text-heading-medium">Figma</h3>
+                        <p class="contact-method-description text-body-medium">Check out my design work and the Morph Design System</p>
+                        <a href="https://www.figma.com/@masih" target="_blank" rel="noopener noreferrer" class="contact-method-link text-body-medium-strong" aria-label="Figma profile (opens in new tab)">View Profile →</a>
                     </div>
                 </div>
             </div>
@@ -114,27 +114,27 @@
         <!-- Mentorship & Sessions -->
         <section class="section section-dark">
             <div class="container">
-                <h2 class="section-title">Mentorship & Sessions</h2>
-                <p class="section-subtitle">Looking for a mentor or someone to chat with?</p>
+                <h2 class="section-title text-heading-large">Mentorship & Sessions</h2>
+                <p class="section-subtitle text-body-large">Looking for a mentor or someone to chat with?</p>
                 
                 <div class="mentorship-grid">
                     <div class="mentorship-card">
                         <div class="mentorship-header">
-                            <h3 class="mentorship-title">Exclusive Talk (Free)</h3>
+                            <h3 class="mentorship-title text-heading-medium">Exclusive Talk (Free)</h3>
                             <div class="mentorship-duration">20 min</div>
                         </div>
-                        <p class="mentorship-description">We can discuss our career paths and work experiences together.</p>
-                        <p class="mentorship-note">To confirm your session, please donate $1 to a charity of your choice.</p>
-                        <a href="mailto:sadri.masih@gmail.com?subject=Exclusive Talk Request" class="mentorship-button">Schedule via Email</a>
+                        <p class="mentorship-description text-body-medium">We can discuss our career paths and work experiences together.</p>
+                        <p class="mentorship-note text-body-medium">To confirm your session, please donate $1 to a charity of your choice.</p>
+                        <a href="mailto:sdarimasih@gmail.com?subject=Exclusive Talk Request" class="mentorship-button">Schedule via Email</a>
                     </div>
 
                     <div class="mentorship-card featured">
                         <div class="mentorship-header">
-                            <h3 class="mentorship-title">Design Mentorship with Masih</h3>
+                            <h3 class="mentorship-title text-heading-medium">Design Mentorship with Masih</h3>
                             <div class="mentorship-duration">75 min</div>
                         </div>
-                        <p class="mentorship-description">Ready to take your design skills to the next level? Weekly mentorship sessions are a proven way to learn a new skill and accelerate your growth in UX/UI design.</p>
-                        <a href="mailto:sadri.masih@gmail.com?subject=Design Mentorship Inquiry" class="mentorship-button">Schedule via Email</a>
+                        <p class="mentorship-description text-body-medium">Ready to take your design skills to the next level? Weekly mentorship sessions are a proven way to learn a new skill and accelerate your growth in UX/UI design.</p>
+                        <a href="mailto:sdarimasih@gmail.com?subject=Design Mentorship Inquiry" class="mentorship-button">Schedule via Email</a>
                     </div>
                 </div>
             </div>
@@ -143,27 +143,27 @@
         <!-- What I Can Help With -->
         <section class="section">
             <div class="container">
-                <h2 class="section-title">What I Can Help With</h2>
+                <h2 class="section-title text-heading-large">What I Can Help With</h2>
                 
                 <div class="help-grid">
                     <div class="help-card">
-                        <h3 class="help-title">Design Mentorship</h3>
-                        <p class="help-description">One-on-one guidance for designers at any stage of their career. Portfolio reviews, skill development, and career advice.</p>
+                    <h3 class="help-title text-heading-medium">Design Mentorship</h3>
+                        <p class="help-description text-body-medium">One-on-one guidance for designers at any stage of their career. Portfolio reviews, skill development, and career advice.</p>
                     </div>
 
                     <div class="help-card">
-                        <h3 class="help-title">Portfolio Reviews</h3>
-                        <p class="help-description">Get feedback on your case studies, design process, and presentation. Make your portfolio stand out.</p>
+                    <h3 class="help-title text-heading-medium">Portfolio Reviews</h3>
+                        <p class="help-description text-body-medium">Get feedback on your case studies, design process, and presentation. Make your portfolio stand out.</p>
                     </div>
 
                     <div class="help-card">
-                        <h3 class="help-title">Project Collaboration</h3>
-                        <p class="help-description">Interested in working together on a product or design system? Let's discuss opportunities.</p>
+                    <h3 class="help-title text-heading-medium">Project Collaboration</h3>
+                        <p class="help-description text-body-medium">Interested in working together on a product or design system? Let's discuss opportunities.</p>
                     </div>
 
                     <div class="help-card">
-                        <h3 class="help-title">Speaking & Workshops</h3>
-                        <p class="help-description">Available for design talks, workshops, or panel discussions about UX design, user safety, and product design.</p>
+                    <h3 class="help-title text-heading-medium">Speaking & Workshops</h3>
+                        <p class="help-description text-body-medium">Available for design talks, workshops, or panel discussions about UX design, user safety, and product design.</p>
                     </div>
                 </div>
             </div>
@@ -173,9 +173,9 @@
         <section class="section section-alt">
             <div class="container">
                 <div class="response-info">
-                    <h3 class="response-title">Response Time</h3>
-                    <p class="response-text">I typically respond to emails within <strong>24-48 hours</strong>. For mentorship inquiries, please allow a bit more time as I review each request carefully.</p>
-                    <p class="response-text">If you haven't heard back after 3 days, feel free to send a gentle follow-up.</p>
+                    <h3 class="response-title text-heading-medium">Response Time</h3>
+                    <p class="response-text text-body-medium">I typically respond to emails within <strong>24-48 hours</strong>. For mentorship inquiries, please allow a bit more time as I review each request carefully.</p>
+                    <p class="response-text text-body-medium">If you haven't heard back after 3 days, feel free to send a gentle follow-up.</p>
                 </div>
             </div>
         </section>
@@ -200,7 +200,7 @@
         "mainEntity": {
           "@type": "Person",
           "name": "Masih Sadri",
-          "email": "sadri.masih@gmail.com",
+          "email": "sdarimasih@gmail.com",
           "sameAs": [
             "https://www.linkedin.com/in/msadri/",
             "https://www.figma.com/@masih",
